--- a/css/responsive.css
+++ b/css/responsive.css
@@ -136,9 +136,9 @@
   }
 
   .logo {
-    width: 50px;
-    height: 50px;
-    background: rgba(255, 255, 255, 0.9);
+    width: 90px;
+    height: 100px;
+    background: transparent !important;
     padding: 8px;
     border-radius: var(--radius-md);
   }
@@ -376,3 +376,4 @@
     image-rendering: crisp-edges;
   }
 }
+
